--- a/config/recaptcha.settings.json
+++ b/config/recaptcha.settings.json
@@ -1,5 +1,5 @@
 {
     "_config_name": "recaptcha.settings",
-    "site_key": "abc",
-    "private_key": "def"
+    "site_key": "",
+    "private_key": ""
 }
